fix: katex overflow makes head bar go wary add shortcode todo update `mode-lisp` . It's no longer considered a draft.

--- a/static/my.css
+++ b/static/my.css
@@ -1,3 +1,7 @@
+article {
+	overflow-x: hidden; /* Ensures head bar works correctly. */
+}
+
 footer .block-bg:not(.block-hover) {
 	background-color: transparent;
 }
